Colaboratory를 통해 생성됨

--- a/my_first_colab.ipynb
+++ b/my_first_colab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "my first colab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWCVm7rn/qGuVauA1oNWEM",
+      "authorship_tag": "ABX9TyMWY1Bu4RgfYpnYXHoSywqM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,69 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o8BSTP_foKsl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c13dbc87-9c5c-456a-9286-c147167dd076"
+      },
+      "source": [
+        "!cat /etc/issue.net"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Ubuntu 18.04.3 LTS\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-2Sp5SgMoVcu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7be511aa-87f9-4823-f029-6d3ab89125d2"
+      },
+      "source": [
+        "print(\"github에 사본 저장\")"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "github에 사본 저장\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "athNhG8wpt-u",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
