Colaboratory를 통해 생성됨

--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hello world.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPzsAzfLHbFb6T6imgXVTNx",
+      "authorship_tag": "ABX9TyP/DvAtS2cQDAJoRkhmSigJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(\"수정사항2\")"
       ],
       "execution_count": null,
       "outputs": []
