Colaboratory를 통해 생성됨

--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hello world.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/DvAtS2cQDAJoRkhmSigJ",
+      "authorship_tag": "ABX9TyMiaz4/8li45mkIbBq/Odup",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
       "source": [
         "print(\"수정사항\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,10 +79,60 @@
       "metadata": {
         "id": "ZbYEO134q9-j",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d0ee1fda-13dd-4790-e46e-9046fee69355"
       },
       "source": [
         "print(\"수정사항2\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "수정사항2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rv-_H420r9la",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "05c27d58-7c5b-4120-d534-ad6773371226"
+      },
+      "source": [
+        "print(10)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mBWdkjlbsC0X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
